# AllLiveTvStream

./: .env  README.md  docker-compose.yml  pyproject.toml
api/: index.py
backend/: Dockerfile  main.py  requirements.txt
backend/app/: __init__.py  config.py
backend/app/api/: endpoints.py
backend/app/cache/: redis_client.py
backend/app/database/: mongo_client.py
backend/app/models/: channel.py
backend/app/schemas/: channel.py
backend/app/services/: playlist_service.py
backend/app/utils/: logger.py
backend/app/validators/: stream_validator.py
backend/app/workers/: scheduler.py
backend/data/: blocklist.json  categories.json  countries.json  feeds.json  languages.json  regions.json  subdivisions.json  timezones.json
backend/tests/: __init__.py  test_unit.py
scripts/: check_atlas.py  check_counts.py  check_languages.py  fetch_and_populate_all.py  ingest_channels.py  performance_test.py  setup_deps.sh  test_apis.py
